--- a/src/main/resources/templates/editar-usuario.html
+++ b/src/main/resources/templates/editar-usuario.html
@@ -65,7 +65,7 @@
 
         <ol class="ls-breadcrumb">
             <li><a href="/user/all">Início</a></li>
-            <li>Novo Usuário</li>
+            <li>Editar Usuário</li>
         </ol>
 
 
