--- a/src/main/resources/templates/listagem-usuarios.html
+++ b/src/main/resources/templates/listagem-usuarios.html
@@ -12,17 +12,11 @@
           type="text/css">
     <link rel="icon" sizes="192x192" href="/locawebstyle/assets/images/ico-boilerplate.png">
     <link rel="apple-touch-icon" href="/locawebstyle/assets/images/ico-boilerplate.png">
-    <script>
-        function confirme(id) {
-            var txt;
-            var r = confirm("Deseja realmente excluir o cliente ?" + id);
-            if (r == true) {
-                console.log(id);
-                window.location.href = window.location.origin + "/excluirCliente?id=" + id;
-            }
-        }
-    </script>
-</head>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    </head>
 <body>
 <div class="ls-topbar ">
 
@@ -91,11 +85,11 @@
                     <tr>
                         <td th:text="${user.nomeCompleto}"></td>
                         <td th:text="${user.username}"></td>
-                        <td th:text="Ativado"></td>
+                        <td th:text="${user.ativado}"></td>
                         <td>
                             <div>
-                                <a href="/user/update" class="ls-btn-primary">Editar</a>
-                                <a href="/user/delete" class="ls-btn-danger">Excluir</a>
+                                <a th:href="@{'/user/update/' + ${user.id}}" class="ls-btn-primary">Editar</a>
+                                <a th:onclick="'deleteItem(' + ${user.id} + ');'" class="ls-btn-danger">Excluir</a>
                             </div>
                         </td>
                     </tr>
@@ -113,6 +107,27 @@
 <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script src="http://assets.locaweb.com.br/locastyle/3.10.1/javascripts/locastyle.js"
         type="text/javascript"></script>
+
+
+<script>
+    function deleteItem(id){
+        if(confirm('Tem certeza que deseja excluir este produto?')){
+            $.ajax({
+                url: '/user/delete/' + id,
+                type: 'DELETE',
+                success: function(result) {
+                    console.debug(" DEU RELOAD " + result);
+                    location.reload();
+                },
+                error: function(e){
+                    location.reload();
+                }
+            });
+        }else{
+
+        }
+    }
+</script>
 
 </body>
 </html>
