--- a/src/main/resources/templates/criar-usuario.html
+++ b/src/main/resources/templates/criar-usuario.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html class="ls-theme-indigo ls-html-nobg  ls-browser-chrome ls-window-md ls-screen-lg" lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" >
 <head>
-    <meta charset="UTF-8">
-    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    <title>Cadastrar Clientes</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, shrink-to-fit=no">
     <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="form-validation.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, shrink-to-fit=no">
     <link href="http://assets.locaweb.com.br/locastyle/3.10.1/stylesheets/locastyle.css" rel="stylesheet"
           type="text/css">
     <link rel="icon" sizes="192x192" href="/locawebstyle/assets/images/ico-boilerplate.png">
@@ -67,7 +66,6 @@
             <li><a href="/user/all">Início</a></li>
             <li>Novo Usuário</li>
         </ol>
-
         <div class="ls-box ls-board-box">
             <header class="ls-info-header">
                 <h2 class="ls-title-3">Cadastrar Usuário</h2>
@@ -100,7 +98,7 @@
                     <label class="ls-label col-md-6">
                         <b class="ls-label-text">Senha</b>
                         <div class="ls-prefix-group">
-                            <input type="password" maxlength="20" id="password_field2a" name="senha">
+                            <input type="password" maxlength="20" id="password_field2a" name="senha" required>
                             <a class="ls-label-text-prefix ls-toggle-pass ls-ico-eye"
                                data-toggle-class="ls-ico-eye, ls-ico-eye-blocked" data-target="#password_field2a"
                                href="#">
@@ -110,25 +108,34 @@
 
                     <label class="ls-label col-md-4">
                         <b class="ls-label-text">Status</b>
-                        <div class="ls-custom-select">
-                            <select class="ls-custom" name="ativado">
+                        <div class="ls-custom-select " >
+                            <select class="ls-select" name="ativado" >
                                 <option value="true">Ativado</option>
                                 <option value="false">Desativado</option>
                             </select>
                         </div>
                     </label>
 
-                    <label class="ls-label col-md-4">
-                        <b class="ls-label-text">Perfil</b>
-                        <div class="ls-custom-select">
-                            <select class="ls-custom" name="papeis">
-                                <th:block th:each="papel : ${listaPapel}">
-                                    <option th:value="${papel.id}" th:text="${papel.nome}"></option>
-                                </th:block>
-                            </select>
-                        </div>
-                    </label>
+                    <div class="ls-label-float-left col-md-12">
+                        <p>Selecione o perfil:</p>
+                        <label class="ls-label-text" for="papelAdmin">
+                            <input type="checkbox" name="listaPapel" id="papelAdmin" value="ADMIN" th:field="*{listaPapel}">
+                            ADMIN
+                        </label>
 
+                        <label class="ls-label-text" for="Estagiario">
+                            <input type="checkbox" name="listaPapel" id="Estagiario" value="ESTAGIARIO" th:field="*{listaPapel}" >
+                            ESTAGIARIO
+                        </label>
+                        <label class="ls-label-text" for="Analista">
+                            <input type="checkbox" name="listaPapel" id="Analista" value="ANALISTA" th:field="*{listaPapel}" >
+                            ANALISTA
+                        </label>
+                        <label class="ls-label-text" for="Gerente">
+                            <input type="checkbox" name="listaPapel" id="Gerente" value="GERENTE" th:field="*{listaPapel}" >
+                            GERENTE
+                        </label>
+                    </div>
                     <div class="ls-actions-btn">
                         <button class="ls-btn-primary" type="submit">Salvar</button>
                         <a href="/user/all" class="ls-btn">Cancelar</a>
@@ -140,7 +147,6 @@
         </div>
     </div>
 </main>
-
 
 <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script src="http://assets.locaweb.com.br/locastyle/3.10.1/javascripts/locastyle.js"
