--- a/src/main/resources/templates/listagem-usuarios.html
+++ b/src/main/resources/templates/listagem-usuarios.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html class="ls-theme-indigo ls-html-nobg  ls-browser-chrome ls-window-md ls-screen-lg" lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Listagem Usuários</title>
     <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="form-validation.css" rel="stylesheet">
+    <meta charset="UTF-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, shrink-to-fit=no">
@@ -12,14 +11,29 @@
           type="text/css">
     <link rel="icon" sizes="192x192" href="/locawebstyle/assets/images/ico-boilerplate.png">
     <link rel="apple-touch-icon" href="/locawebstyle/assets/images/ico-boilerplate.png">
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-            crossorigin="anonymous"></script>
-    </head>
+
+    <script>
+        function deleteItem(id){
+            if(confirm('Tem certeza que deseja excluir este usuário?')){
+                $.ajax({
+                    url: '/user/delete/' + id,
+                    type: 'DELETE',
+                    success: function(result) {
+                        console.debug(" DEU RELOAD " + result);
+                        location.reload();
+                    },
+                    error: function(e){
+                        location.reload();
+                    }
+                });
+            }else{
+
+            }
+        }
+    </script>
+</head>
 <body>
 <div class="ls-topbar ">
-
 
     <span class="ls-show-sidebar ls-ico-menu"></span>
 
@@ -63,8 +77,12 @@
 <main class="ls-main ">
     <div class="container-fluid">
         <h1 class="ls-title-intro ls-ico-users">Usuários</h1>
-
-
+<!--        <div th:if="${usuarioAdicionado != null}">-->
+<!--            <div class="ls-alert-success">Usuário Criado com Sucesso! </div>-->
+<!--        </div>-->
+<!--        <div th:if="${usuarioAtualizado != null}">-->
+<!--            <div class="ls-alert-success">Usuário Editado com Sucesso! </div>-->
+<!--        </div>-->
         <div class="ls-box ls-board-box">
             <header class="ls-info-header">
                 <h2 class="ls-title-3">Lista de Usuários</h2>
@@ -104,30 +122,11 @@
         </div>
     </div>
 </main>
-<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-<script src="http://assets.locaweb.com.br/locastyle/3.10.1/javascripts/locastyle.js"
-        type="text/javascript"></script>
 
-
-<script>
-    function deleteItem(id){
-        if(confirm('Tem certeza que deseja excluir este produto?')){
-            $.ajax({
-                url: '/user/delete/' + id,
-                type: 'DELETE',
-                success: function(result) {
-                    console.debug(" DEU RELOAD " + result);
-                    location.reload();
-                },
-                error: function(e){
-                    location.reload();
-                }
-            });
-        }else{
-
-        }
-    }
-</script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
