--- a/src/main/resources/templates/editar-usuario.html
+++ b/src/main/resources/templates/editar-usuario.html
@@ -117,16 +117,16 @@
                         </div>
                     </label>
 
-                    <div class="ls-label-float-left col-md-12">
-                        <p>Selecione o perfil:</p>
-
-                        <div th:each="papel : ${listaPapel}">
-                            <label class="ls-label-text">
-                                <input type="checkbox" th:value="${papel.id}" th:text="${papel.nome}">
-                            </label>
-                        </div>
-                    </div>
-
+                        <label class="ls-label col-md-4">
+                            <b class="ls-label-text">Perfil</b>
+                            <div class="ls-custom-select">
+                                <select class="ls-custom" name="papeis">
+                                    <th:block th:each="papel : ${listaPapel}">
+                                        <option th:value="${papel.id}" th:text="${papel.nome}"></option>
+                                    </th:block>
+                                </select>
+                            </div>
+                        </label>
                     <div class="ls-actions-btn">
                         <button class="ls-btn-primary" type="submit">Salvar</button>
                         <a href="/user/all" class="ls-btn">Cancelar</a>
