--- a/src/main/resources/templates/listagem-usuarios.html
+++ b/src/main/resources/templates/listagem-usuarios.html
@@ -11,26 +11,11 @@
           type="text/css">
     <link rel="icon" sizes="192x192" href="/locawebstyle/assets/images/ico-boilerplate.png">
     <link rel="apple-touch-icon" href="/locawebstyle/assets/images/ico-boilerplate.png">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
 
-    <script>
-        function deleteItem(id){
-            if(confirm('Tem certeza que deseja excluir este usuário?')){
-                $.ajax({
-                    url: '/user/delete/' + id,
-                    type: 'DELETE',
-                    success: function(result) {
-                        console.debug(" DEU RELOAD " + result);
-                        location.reload();
-                    },
-                    error: function(e){
-                        location.reload();
-                    }
-                });
-            }else{
-
-            }
-        }
-    </script>
 </head>
 <body>
 <div class="ls-topbar ">
@@ -122,7 +107,25 @@
         </div>
     </div>
 </main>
+<script>
+    function deleteItem(id){
+        if(confirm('Tem certeza que deseja excluir este usuário?')){
+            $.ajax({
+                url: '/user/delete/' + id,
+                type: 'DELETE',
+                success: function(result) {
+                    console.debug(" DEU RELOAD " + result);
+                    location.reload();
+                },
+                error: function(e){
+                    location.reload();
+                }
+            });
+        }else{
 
+        }
+    }
+</script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
